<resources>
    <string name="zaz">zaz</string>
    <string name="app_name">zaz</string>
    <string name="z">z</string>
    <string name="a">a</string>
    <string name="logo">logo</string>
    <string name="icon">Icon</string>
    <string name="close">Fechar</string>

    <!--Menu-->
    <string name="home">Início</string>
    <string name="near_business">Negócios próximos</string>
    <string name="notifications">Notificações</string>
    <string name="profile">Perfil</string>
    <string name="back">Voltar</string>
    <string name="profile_image">Profile Image</string>
    <string name="invite_friends">Convidar amigos</string>

    <!--Home tabs-->
    <string name="list">Lista</string>
    <string name="map">Mapa</string>
    <string name="search">Procurar</string>

    <!--Login-->
    <string name="accelerating_business">Acelerando negócios e criando oportunidades</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="type_your_email">Digite seu e-mail</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="forget_your_password">Esqueceu sua senha?</string>
    <string name="login">Entrar</string>
    <string name="no_registration_yet">Ainda não possui um cadastro?</string>

    <!--Recommendation-->
    <string name="type_recommendation_email">Digite logo abaixo o e-mail da pessoa que lhe indicou para baixar o aplicativo ZaZ</string>
    <string name="identify_email">Identifique a pessoa que lhe indicou</string>
    <string name="proceed">Prosseguir</string>
    <string name="i_already_have_registration">Já tenho um cadastro</string>

    <!--Register-->
    <string name="register">Cadastre-se</string>
    <string name="type_your_name">Digite seu nome completo</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="invalid_confirm_password">A confirmação da senha deve ser igual a senha informada</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="insert_valid_email">Insira um endereço de e-mail válido</string>
    <string name="required_field">Campo obrigatório</string>

    <string name="register_service">Cadastrar Serviço</string>
    <string name="register_product">Cadastrar Produto</string>
    <string name="register_job_opportunity">Cadastrar Vaga de Emprego</string>
    <string name="register_promotion">Cadastrar Promoção</string>
    <string name="register_immobile">Cadastrar Imóvel</string>
    <string name="register_vehicle">Cadastrar Veículo</string>
    <string name="register_food">Cadastrar Alimentação</string>
    <string name="register_event">Cadastrar Evento</string>
    <string name="my_ratings">Minhas Avaliações</string>
    <string name="followers">Seguidores</string>
    <string name="following">Seguindo</string>
    <string name="my_zaz_guests">Meus Convidados ZAZ</string>
    <string name="zaz_user">Usuário ZAZ</string>
    <string name="finances">Finanças</string>
    <string name="premium_plan">Plano Premium</string>
    <string name="logout">Sair</string>
    <string name="category">Categoria</string>

    <!--New Ad-->
    <string name="advertise_right_now">Anuncie\nagora mesmo</string>
    <string name="new_ad">Novo anúncio</string>
    <string name="ad_data">Dados do anúncio</string>
    <string name="ad_type">Tipo de anúncio</string>
    <string name="ad_title">Título do anúncio</string>
    <string name="amount">Valor</string>
    <string name="description">Descrição</string>
    <string name="photos">Fotos</string>
    <string name="choose_images">Escolher imagens</string>
    <string name="publish_ad">Publicar anúncio</string>
    <string name="capture">Capturar</string>
    <string name="preview_area">Pré-visualização</string>

    <!--Profile-->
    <string name="setup_profile">Configurar perfil</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="camera">Câmera</string>
    <string name="cellphone">Celular</string>
    <string name="country">País</string>
    <string name="change_password">Alterar senha</string>
    <string name="social_networks">Redes sociais</string>
    <string name="preferences">Preferências</string>
    <string name="proximity_radius">Raio de proximidade</string>
    <string name="num_km">%1$d KM</string>
    <string name="your_network">Sua rede</string>
    <string name="business">Negócios</string>
    <string name="my_informations">Meus dados</string>
    <string name="phone">Telefone</string>
    <string name="ads">Anúncios</string>

    <!--Ad post-->
    <string name="ad_image">Imagem anúncio</string>
    <string name="dolar">$</string>
    <string name="more_detail">+ detalhes</string>
    <string name="gear">Engrenagem</string>
    <string name="share">Compartilhar</string>
    <string name="posted_by">Postado por</string>
    <string name="see_profile">Ver perfil</string>
    <string name="ratings">Avaliações</string>
    <string name="stars">Stars</string>
    <string name="all">Todas</string>
    <string name="rate_ad">Avaliar este anúncio</string>
    <string name="type_email">Digite o email</string>
    <string name="categories">Categorias</string>

    <!--Notifications-->
    <string name="see_ad">Ver anúncio</string>

    <!--User follow-->
    <string name="unfollow">Deixar de seguir</string>
    <string name="follow">Seguir</string>
    <string name="rating">Avaliação</string>
    <string name="rate">Avaliar</string>
    <string name="add_image">Adicionar imagem</string>

    <!--Search categories-->
    <string name="services">Serviços</string>
    <string name="food">Food</string>
    <string name="properties">Imóveis</string>
</resources>