<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.danielcunha.zaz.ui.authentication.login.LoginViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/xl"
                android:contentDescription="@string/logo"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/layout_logo"
                android:layout_width="@dimen/xxl_4"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_zaz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/xxl_2"
                android:layout_marginTop="@dimen/l"
                android:gravity="center"
                android:text="@string/accelerating_business"
                android:textAllCaps="true"
                android:textAppearance="@style/Montserrat.Medium.Xs"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/layout_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xl"
                android:background="@drawable/shape_xs_rounded_top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    style="@style/Montserrat.Xxs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m"
                    android:gravity="center"
                    android:text="@string/type_your_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/TextInputLayout.Rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxs_2"
                    android:hint="@string/email"
                    app:errorState="@{viewModel.emailError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_envelope"
                        android:drawablePadding="@dimen/xxs_2"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="@dimen/xs"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/s"
                    android:gravity="center"
                    android:text="@string/type_your_password"
                    android:textAppearance="@style/Montserrat.Xxs" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    style="@style/TextInputLayout.Rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxs_2"
                    android:hint="@string/password"
                    app:errorState="@{viewModel.passwordError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="@dimen/xxs_2"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/xs"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxs_2"
                    android:gravity="center"
                    android:onClick="@{_->viewModel.actionForget()}"
                    android:paddingVertical="@dimen/xxs_4"
                    android:text="@string/forget_your_password"
                    android:textAppearance="@style/Montserrat.Xxs"
                    android:textColor="@color/orange" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button.Xs"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/s"
                    android:layout_marginTop="@dimen/s"
                    android:enabled="@{!viewModel.isLoading()}"
                    android:onClick="@{_->viewModel.actionLogin()}"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_register"
                    style="@style/Button.Outlined.Xs.Orange"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxl"
                    android:layout_marginHorizontal="@dimen/s"
                    android:layout_marginTop="@dimen/s"
                    android:layout_marginBottom="@dimen/m"
                    android:onClick="@{_->viewModel.actionRegister()}"
                    android:text="@string/no_registration_yet" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>